; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_pci_restore_config_space.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_pci_restore_config_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i64 }

@PCI_HEADER_TYPE_NORMAL = common dso_local global i64 0, align 8
@PCI_HEADER_TYPE_BRIDGE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @pci_restore_config_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pci_restore_config_space(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %3 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %4 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @PCI_HEADER_TYPE_NORMAL, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %10 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %9, i32 10, i32 15, i32 0, i32 0)
  %11 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %12 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %11, i32 4, i32 9, i32 10, i32 0)
  %13 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %14 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %13, i32 0, i32 3, i32 0, i32 0)
  br label %32

15:                                               ; preds = %1
  %16 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %17 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @PCI_HEADER_TYPE_BRIDGE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %15
  %22 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %23 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %22, i32 12, i32 15, i32 0, i32 0)
  %24 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %25 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %24, i32 9, i32 11, i32 0, i32 1)
  %26 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %27 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %26, i32 0, i32 8, i32 0, i32 0)
  br label %31

28:                                               ; preds = %15
  %29 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %30 = call i32 @pci_restore_config_space_range(%struct.pci_dev* %29, i32 0, i32 15, i32 0, i32 0)
  br label %31

31:                                               ; preds = %28, %21
  br label %32

32:                                               ; preds = %31, %8
  ret void
}

declare dso_local i32 @pci_restore_config_space_range(%struct.pci_dev*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
